computerdot change domain to squib

--- a/Seminars/Composing with Computers 2.html
+++ b/Seminars/Composing with Computers 2.html
@@ -22,17 +22,17 @@
 <div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Seminars/Composing with Computers 1.html">Composing with Computers 1</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.001.png'/><br><b>John Cage and Karlheinz Stockhausen on a plane - 4.bp.blogspot.com</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.001.png'/><br><b>John Cage and Karlheinz Stockhausen on a plane - 4.bp.blogspot.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.002.png'/><br><b>In Formalised Music, 1971</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.002.png'/><br><b>In Formalised Music, 1971</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.003.png'/><br><b>In The Computer Music Tutorial, 1996</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.003.png'/><br><b>In The Computer Music Tutorial, 1996</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.004.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.004.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.005.png'/><br><b>Schoenberg self-portrait - rosswolfe.files.wordpress.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.005.png'/><br><b>Schoenberg self-portrait - rosswolfe.files.wordpress.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.006.png'/><br><b>12-tone Matrix - acting-man.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.006.png'/><br><b>12-tone Matrix - acting-man.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>(
 ~matrixFunc = {arg series;
@@ -63,7 +63,7 @@ Pbind(\degree, Pseq(~retrograde[0], 1), \scale, Scale.chromatic, \dur, 0.4).play
 Pbind(\degree, Pseq(~inversion[0], 1), \scale, Scale.chromatic, \dur, 0.4).play;
 Pbind(\degree, Pseq(~retrogradeInversion[0], 1), \scale, Scale.chromatic, \dur, 0.4).play;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.007.png'/><br><b>12-tone Matrix - blog-archive.indabamusic.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.007.png'/><br><b>12-tone Matrix - blog-archive.indabamusic.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>~series = ["c ", "c#", "d ", "b ", "a#", "g#", "e ", "a ", "d#", "f#", "f ", "g "].notemidi
 ~series = [ 0, 1, 2, 11, 10, 8, 4, 9, 3, 6, 5, 7 ];
@@ -88,7 +88,7 @@ Pbind(\degree, Pseq(~series, 1), \scale, Scale.chromatic, \dur, 0.4).play
 
 Pbind(\degree, Pseq(~wonderTones, inf), \scale, Scale.chromatic, \dur, 0.1).play;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.008.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.008.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>//Serialisation of other parameters
 (
@@ -170,14 +170,14 @@ Pbind(\degree, Pseq(~permutation, 1), \scale, Scale.chromatic, \dur, 0.4).play;
 ~lace = Ppatlace([Pseq(~playPrime ++ ~playRetro, 3), Pseq((~playInv ++ ~playRetroInv)-12, 3), Pseq(\rest!6, inf)], inf);
 Pbind(\degree, ~lace, \scale, Scale.chromatic, \dur, Prand([1/6, 2/6, 3/6, 4/6, 5/6, 6/6]*0.75, inf)).play;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.009.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.009.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.010.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.011.png'/><br><b>In "The Crisis of Serial Music", 1955</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.010.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.011.png'/><br><b>In "The Crisis of Serial Music", 1955</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.012.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.013.png'/><br><b>Iannis Xenakis - youtube.com</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.014.png'/><br><b>Formalised Music - cca.qc.ca</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.012.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.013.png'/><br><b>Iannis Xenakis - youtube.com</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.014.png'/><br><b>Formalised Music - cca.qc.ca</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Simple stochastic example
 (
@@ -207,14 +207,14 @@ Synth(\sinePerc, [\freq, ~notes.wchoose(~prob).postln.midicps]);
 }.fork;
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.015.png'/><br><b>Gottfried Michael Koenig - 68.media.tumblr.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.015.png'/><br><b>Gottfried Michael Koenig - 68.media.tumblr.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Koenig shotgun filter
 ~sound = {Synth(\sinePerc, [\freq, rrand(400,1000), \amp, rrand(0.4,0.6)])}
 ~prob = 1; //100% probability of note playing
 (
 {inf.do{
-[~sound, {}].wchoose((~prob-[0,1]).abs).value;
+[~sound, 0].wchoose((~prob-[0,1]).abs).value;
     0.15.yield;
 }}.fork
 )
@@ -222,10 +222,10 @@ Synth(\sinePerc, [\freq, ~notes.wchoose(~prob).postln.midicps]);
 ~prob = 0.25; //change probability of note playing
 ~prob = 0.75;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.016.png'/><br><b>Andrey Markov - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.016.png'/><br><b>Andrey Markov - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.017.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.018.png'/><br><b>2-state Markov process</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.017.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.018.png'/><br><b>2-state Markov process</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Simple 2-state Markov Chain
 (
@@ -246,8 +246,8 @@ Synth(\sinePerc, [\freq, ~notes.wchoose(~prob).postln.midicps]);
 }.fork
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.019.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.020.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.019.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.020.png'/></div>
 <pre class='code prettyprint lang-sc'>//Zero order transition table (weighted random)
 (
 { inf.do{
@@ -312,7 +312,7 @@ Synth(\my_synth, [\freq, note.postln.midicps, \dur, 0.2])
 ~text = "aaa a aaz";
 
 ~text = "a";</pre>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.021.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.021.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Quarks.gui; //install MathLib
 
@@ -435,45 +435,45 @@ m = MarkovSetN.fill(100, Pseq([1, 2, 3, 4, Prand([5, 55, 555])], inf).asStream, 
 8.do { m.next([1,2]).postln };
 8.do { m.next([3,4]).postln };
 8.do { m.next([4,5]).postln };</pre>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.022.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.022.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.023.png'/><br><b>Lejaren Hiller - cloudfront.net</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.023.png'/><br><b>Lejaren Hiller - cloudfront.net</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.024.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.024.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/n0njBFLQSk8"); //Experiment 1</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.025.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.025.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/MrN0pOnA1x4"); //Experiment 2
 Computer.url("http://youtu.be/cuq4smO_4Js"); //Experiment 3</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.026.png'/><br><b>Lejaren Hiller - computermusicblog.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.026.png'/><br><b>Lejaren Hiller - computermusicblog.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/QyqiSbbwHIs"); //Experiment 4</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.027.png'/><br><b>John Cage and Lejaren Hiller - musicainformatica.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.027.png'/><br><b>John Cage and Lejaren Hiller - musicainformatica.org</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/t_hTxJpWITw");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.028.png'/><br><b>Iannis Xenakis - pinimg.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.028.png'/><br><b>Iannis Xenakis - pinimg.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.029.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.030.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.031.png'/><br><b>Achorripsis - 4.bp.blogspot.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.029.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.030.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.031.png'/><br><b>Achorripsis - 4.bp.blogspot.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/RHQM2-MMXzY");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.032.png'/><br><b>St/4 - musicengraving.de</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.032.png'/><br><b>St/4 - musicengraving.de</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/9KsWpuqTYLU");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.033.png'/><br><b>Speaker layout for Analogique B - granularsynthesis.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.033.png'/><br><b>Speaker layout for Analogique B - granularsynthesis.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/mXIJO-af_u8");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.034.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.035.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.034.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.035.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Quarks.gui //Install Tendency quark
 
@@ -604,7 +604,7 @@ Ndef(\tendency, {var freq;
 });
 )
 
-Ndef(\tendency, {})
+Ndef(\tendency, 0)
 
 (
 Ndef(\tendency, {arg modFreq=0.1;
@@ -616,7 +616,7 @@ Ndef(\tendency, {arg modFreq=0.1;
 });
 )
 
-Ndef(\tendency, {});
+Ndef(\tendency, 0);
 
 (
 Ndef(\tendency, {arg modFreq=0.1;
@@ -628,7 +628,7 @@ Ndef(\tendency, {arg modFreq=0.1;
 });
 )
 
-Ndef(\tendency, {});
+Ndef(\tendency, 0);
 
 (
 Ndef(\tendency, {arg trigFreq=10;
@@ -646,9 +646,9 @@ Ndef(\tendency).set(\trigFreq, 30);
 Ndef(\tendency).set(\trigFreq, 10);
 Ndef(\tendency).set(\trigFreq, 5);
 
-Ndef(\tendency, {});</pre>
+Ndef(\tendency, 0);</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.036.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.036.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Quark.gui //install NatureToolKit
 
@@ -657,8 +657,8 @@ ModernLife //Cellular Automata
 LSys //L-systems
 GAWorkbench //Genetic Algorithms</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.037.png'/><br><b>Cellular Automata - emanueleferonato.com</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.038.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.037.png'/><br><b>Cellular Automata - emanueleferonato.com</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.038.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>ModernLife
 // the default rule is "23/3" (Conway's Game of Life)
@@ -688,8 +688,8 @@ a.stop;
 a = ModernLife.new.setRule("1357/1357").fps_(10).fadeAmount_(1);
 a.stop;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.039.png'/><br><b>L-system Tree - bentrubewriter.files.wordpress.com</b></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar4/seminar 4.040.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.039.png'/><br><b>L-system Tree - bentrubewriter.files.wordpress.com</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.040.png'/></div>
 
 <p><strong>LSystems</strong><pre class='code prettyprint lang-sc'>// simple example, fibonacci numbers
 a = LSys("A", ["A" -&gt; "B", "B" -&gt; "AB"]);
