--- a/Study Guides/Digital Audio.html
+++ b/Study Guides/Digital Audio.html
@@ -47,12 +47,12 @@
 
 <p>D/A conversion is the opposite:<ul>
 <li>Convertor translates numbers into analog signal made of voltage steps<li>An anti-imaging filter (lowpass filter, smoothing filter) smooths the steps into an analog signal<li>Nothing is lost!!</ul>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure1.png'/><br><b>Fig. 1: A/D to D/A chain</b></div>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure2.png'/><br><b>Fig. 2: Digital sampling</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure1.png'/><br><b>Fig. 1: A/D to D/A chain</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure2.png'/><br><b>Fig. 2: Digital sampling</b></div>
 <h3><a class='anchor' name='Audio%20Sampling'>Audio Sampling</a></h3>
 <ul>
 <li>Analog signal is a time-continuous electrical waveform<li>A/D converter turns signal into time-discrete sequence of binary numbers<li>Pulse code modulation (PCM) is the method to digitally represent analog signals<li>Audio sampling is the process were the A/D converter measures the analog waveform at regular intervals<li>Samples are like “still frames” in a film, which give impression of continuous movement</ul>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure3.png'/><br><b>Fig. 3: Waveform to sample pulses</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure3.png'/><br><b>Fig. 3: Waveform to sample pulses</b></div>
 <h3><a class='anchor' name='Sampling%20Rate'>Sampling Rate</a></h3>
 <ul>
 <li>Rate at which a/d converter samples a signal.<li>Higher sampling rate - higher frequency response<li>Also remember: higher sampling rate = more memory space in your hard drive<li>44.100 Hz or 44.1 khz is the CD sampling freq<li>48 khz is the ‘professional’ rate (DVD, blu-ray)</ul>
@@ -62,7 +62,7 @@
 <h3><a class='anchor' name='Aliasing'>Aliasing</a></h3>
 <ul>
 <li>Phenomenon where ‘alias’ unwanted representation of sampled signal constructed through d/a conversion<li>Sidebands produced by under-sampling signal<li>Frequencies above nyquist frequency are reproduced as lower sidebands<li>Spectral repetition (mirror image of original)</ul>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure4.png'/><br><b>Fig. 4: Undersampling produces sidebands</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure4.png'/><br><b>Fig. 4: Undersampling produces sidebands</b></div>
 
 <p><strong>Examples</strong>:
 <p>A sine wave with sample and hold demonstrate principle:<pre class='code prettyprint lang-sc'>{Latch.ar(SinOsc.ar(440,0,0.25), Impulse.ar(MouseX.kr(440,22000)))}.scope;</pre>
@@ -82,27 +82,27 @@
 <p><li>Anti-aliasing filter:<ul>
 <li>We need to filter frequencies above the nyquist frequency to avoid aliasing.<li>Anti aliasing filter (lowpass filter) is used in original analog signal before a/D conversion</ul>
 </ul>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure5.png'/><br><b>Fig. 5: Anti-aliasing filter</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure5.png'/><br><b>Fig. 5: Anti-aliasing filter</b></div>
 
 <p><strong>Examples</strong>: Now let's reduce the sample rate but with smoothing. Your can still hear aliasing!<pre class='code prettyprint lang-sc'>{SmoothDecimator.ar(Decimator.ar(PlayBuf.ar(2, b), MouseX.kr(20,22000)), MouseX.kr(20,22000), smoothing: 1)}.scope;</pre>
 <h3><a class='anchor' name='Digital-to-Analog%20Conversion'>Digital-to-Analog Conversion</a></h3>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure6.png'/><br><b>Fig. 6: D/A conversion</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure6.png'/><br><b>Fig. 6: D/A conversion</b></div>
 <h3><a class='anchor' name='Quantising'>Quantising</a></h3>
 <ul>
 <li>After sampling the modulated pule chain is quantised<li>Amplitude is mapped onto a scale of stepped binary values<li>Each sample amplitude is represented by unique binary number<li>Binary numbers are represented as power of two (only two options, 1 or 2)<li>Binary (base2), Hexadecimal (base16), decimal(BASE10)</ul>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure7.png'/><br><b>Fig. 7: 3-bit quantizing</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure7.png'/><br><b>Fig. 7: 3-bit quantizing</b></div>
 <h3><a class='anchor' name='Binary%20for%20Beginners'>Binary for Beginners</a></h3>
 <ul>
 <li>A binary word or ‘byte’ (8-bits):<li><code class='code prettyprint lang-sc'>0 1 1 1 0 0 1 0</code> - one number is 1 bit - or 1 'switch'.</ul>
 
 <p><table>
 <tr><td>Binary<td>0<td>1<td>1<td>1<td>0<td>0<td>1<td>0<tr><td>Decimal weighting<td>128<td>64<td>32<td>16<td>8<td>4<td>2<td>1<tr><td>Decimal equivalent<td>0 +<td>64 +<td>32 +<td>16 +<td>0 +<td>0 +<td>2 +<td>0 = 114</table>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure8.png'/><br><b>Fig. 8: Binary/Hexadecimal/Decimal</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure8.png'/><br><b>Fig. 8: Binary/Hexadecimal/Decimal</b></div>
 <h3><a class='anchor' name='Bit-depth'>Bit-depth</a></h3>
 
 <p>Bit-depth dictates the number of discrete volume levels that create the dynamic range available in digital audio bit words and bit resolution:<ul>
 <li>2-bit = <code class='code prettyprint lang-sc'>2**2</code> (4 steps)<li>3-bit = <code class='code prettyprint lang-sc'>2**3</code> (8 steps)<li>4-bit = <code class='code prettyprint lang-sc'>2**4</code> (16 steps)<li>8-bit = <code class='code prettyprint lang-sc'>2**8</code> (256 steps)<li>16-bit = <code class='code prettyprint lang-sc'>2**16</code> (65536 steps)</ul>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure9.png'/><br><b>Fig. 9: 4-bit quantizing</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure9.png'/><br><b>Fig. 9: 4-bit quantizing</b></div>
 <h3><a class='anchor' name='Digital%20Dynamic%20Range'>Digital Dynamic Range</a></h3>
 <ul>
 <li><em>Dynamic range</em>: range of volume between loudest and softest audible sounds - the greater dynamic range, the more detailed representation of sound.<li><em>Signal-to-noise ratio</em>: difference in volume between what you want to hear (signal) and what you don’t want to hear (noise)<li><em>Digital dynamic range</em>: volume range in digital audio file go between -infinity (silence) to zero (loudest) decibels (DB). sounds above zero produce distortion</ul>
@@ -157,7 +157,7 @@ b.asString.replace("[").replace("]").replace(",").speak //computer</pre>
 
 <p>Smooth signal (with smoothing filter):<pre class='code prettyprint lang-sc'>{SmoothDecimator.ar(Decimator.ar(PlayBuf.ar(2, b), 2000, 4), 2000, smoothing: 1)}.scope;</pre>
 <h3><a class='anchor' name='A%20bit%20of%20music'>A bit of music</a></h3>
-<div class='image'><img src='http://federicoreuben.com/computerdotplay/guides/guide1/figure10.png'/><br><b>Fig. 10: Mario</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/guides/guide1/figure10.png'/><br><b>Fig. 10: Mario</b></div>
 <pre class='code prettyprint lang-sc'>Ndef(\sound).play;
 
 ~bitdepth = 4;
