--- a/Seminars/Composing with Computers 1.html
+++ b/Seminars/Composing with Computers 1.html
@@ -22,9 +22,9 @@
 <div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.001.png'/><br><b>Johann Wolfgang von Goethe - wikipedia.org</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.001.png'/><br><b>Johann Wolfgang von Goethe - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.002.png'/><br><b>In Handbook of Research on Creativity, 2013</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.002.png'/><br><b>In Handbook of Research on Creativity, 2013</b></div>
 
 <p><pre class='code prettyprint lang-sc'>(
 {var n;
@@ -41,31 +41,31 @@ Pan2.ar(Gendy1.ar(6.rand,6.rand,1.0.rand,1.0.rand,freq ,freq, 1.0.rand, 1.0.rand
 }.play
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.003.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.003.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.004.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.004.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.005.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.005.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.006.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.006.png'/><br><b>Brian Eno: 77 Million Paintings</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.007.png'/><br><b>In Brian Eno, Visual Music, C. Scoates, 2013</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.007.png'/><br><b>In Brian Eno, Visual Music, C. Scoates, 2013</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.008.png'/><br><b>Generative Systems and Gardening</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.008.png'/><br><b>Generative Systems and Gardening</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.009.png'/><br><b>In The Cambridge Companion to Electronic Music, 2007</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.009.png'/><br><b>In The Cambridge Companion to Electronic Music, 2007</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.010.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.010.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/hdzc-vsfRew");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.011.png'/><br><b>Koan Pro and Generative Music 1 - intermorphic.com, iomoio.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.011.png'/><br><b>Koan Pro and Generative Music 1 - intermorphic.com, iomoio.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.012.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.012.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/ccjhAGJxL-w?list=PL6mJS-_ZqwRQ3F4_nhAHl_V_SmVXL0sHA");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.013.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.013.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
 
 <p><pre class='code prettyprint lang-sc'>(
 {var a, c, d, s, z, y;
@@ -80,15 +80,15 @@ a = 4;
 }.play
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.014.png'/><br><b>Wind Chimes - ghar360.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.014.png'/><br><b>Wind Chimes - ghar360.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.015.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.015.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.016.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.016.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.017.png'/><br><b>Gramophone - emiarchivetrust.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.017.png'/><br><b>Gramophone - emiarchivetrust.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.018.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.018.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Generative remix by Nick Collins (evaluate each section of code):
 b = Buffer.loadDialog(s); //you need to change the path to a soundfile in your computer
@@ -222,35 +222,35 @@ barsdone= barsdone+1;
 t.stop;
 b.free;</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.019.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.020.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.019.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.020.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.021.png'/><br><b>Grout and Palisca, 1996, A History of Western Music. 5th ed.</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.021.png'/><br><b>Grout and Palisca, 1996, A History of Western Music. 5th ed.</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.022.png'/><br><b>In The Cambridge Companion to Electronic Music, 2007</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.022.png'/><br><b>In The Cambridge Companion to Electronic Music, 2007</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.023.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.023.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/Gq5B3M4jRtQ");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.024.png'/><br><b>Grout and Palisca, 1996, A History of Western Music. 5th ed.</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.024.png'/><br><b>Grout and Palisca, 1996, A History of Western Music. 5th ed.</b></div>
 
 <p><strong>Josquin Desprez</strong> (c.1450-1521) - <em>De profundis</em><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/An6r1KDD_S0");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.025.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.026.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.025.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.026.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/uH0SX8Knseo"); //Duffay
 Computer.url("https://youtu.be/KHNMgDIk1QI"); //L’homme armé
 Computer.url("https://youtu.be/68N791msDt0"); //Missa l’Homme Armé</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.027.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.027.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://oregonbachfestival.com/digital-bach-project/cuepoints/goldberg-variations");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.028.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.028.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.029.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.029.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>(
 ~intervals = (0..12);
@@ -276,7 +276,7 @@ Pbind(\degree, Pseq(~playIntervals), \dur, 0.3).play;
 Pbind(\degree, Pseq(~playIntervals), \dur, 0.3).play;
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.030.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.030.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>//major scale
 ~major = Scale.major.degrees ++ [12];
@@ -293,7 +293,7 @@ Pbind(\midinote, Pseq(~major+60), \dur, 0.2).play;
 Pbind(\degree, Pseq((0..7), inf), \scale, Scale.major, \dur, 0.1, \ctranspose, Pseq(~arr.flat, 1)).play;
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.031.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.031.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>//minor scales
 ~minor = Scale.minor.degrees ++ [12]
@@ -312,7 +312,7 @@ Pbind(\degree, Pseq((0..7), 1), \scale,  ~harmMinor, \dur, 0.2).play;
 Pbind(\midinote, Pseq(~melodMinor+60), \dur, 0.2).play;
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.032.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.032.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>(
 ~modes = [Scale.ionian, Scale.dorian, Scale.phrygian, Scale.lydian,
@@ -342,7 +342,7 @@ Pbind(\degree, Pseq(((0..7)!~modes.size).flat, 1), \scale, Pseq(~playModes.flat,
     \ctranspose, Pseq(~modeTransp.flat, 1),\dur, 0.2).play;
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.033.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.033.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>(
 ~circle = Array.series(12,0,7)%12;
@@ -365,7 +365,7 @@ Pbind(\degree, [0,2,4], \ctranspose, Pseq(~circleTriad.flat, 1), \scale, Scale.m
 Ppar([~pat1, ~pat2], 1).play;
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.034.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.034.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>(
 //triads
@@ -424,21 +424,21 @@ Pbind(\midinote, Pseq([~c7, ~cmaj7, ~cmin7, ~cdim, ~chalfdim]+48, inf),
 Pbind(\midinote, Pseq(~inversions.postln+48,inf), \ctranspose, Pseq(~circleTriad.flat, 1), \dur, 0.2).play
 )</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.035.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.035.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://sunsite.univie.ac.at/Mozart/dice/");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.036.png'/><br><b>David Cope - alchetron.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.036.png'/><br><b>David Cope - alchetron.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.037.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.037.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/yFImmDsNGdE?t=45s"); //Tech Closeup TV
 Computer.url("http://youtu.be/t6WeiyvAiYQ"); //Chopin style
 Computer.url("http://youtu.be/R-_9zSSQK3o"); //Joplin style</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.038.png'/><br><b>Generative Music 1 at the Science Museum - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.038.png'/><br><b>Generative Music 1 at the Science Museum - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar2/seminar2.039.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.039.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/7qEu0kuoKEQ");</pre>
 <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Seminars/Composing with Computers 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Seminars/Composing with Computers 1.schelp</a><br>link::Seminars/Composing with Computers 1::<br>sc version: 3.8.0</div></div></body></html>
