--- a/Seminars/Human-Computer Interaction.html
+++ b/Seminars/Human-Computer Interaction.html
@@ -22,112 +22,112 @@
 <div id='related'>See also: <a href="./../Computer.html">Computer.play</a>, <a href="./../Workshops/Interfacing.html">Interfacing</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.001.png'/><br><b>Laetitia Sonami - bbc.co.uk</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.001.png'/><br><b>Laetitia Sonami - bbc.co.uk</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/C8GqbS2w_Lg");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.002.png'/><br><b>Artist Interview: Laetitia Sonami - somarts.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.002.png'/><br><b>Artist Interview: Laetitia Sonami - somarts.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.003.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.003.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.004.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.004.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.005.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.005.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.006.png'/><br><b>Raymond Scott at Studio - localsuicide.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.006.png'/><br><b>Raymond Scott at Studio - localsuicide.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.007.png'/><br><b>Raymond Scott’s Electronium - preservationsound.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.007.png'/><br><b>Raymond Scott’s Electronium - preservationsound.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/1SHJ6CcML80"); //Cindy Electronium
 Computer.url("http://youtu.be/MDIIfAMGLhM"); //Twilight in Turkey</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.008.png'/><br><b>Gordon Mumma at studio & schematics for MESA - brainwashed.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.008.png'/><br><b>Gordon Mumma at studio & schematics for MESA - brainwashed.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.009.png'/><br><b>Gordon Mumma (1972) Performing AMBIVEX.</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.009.png'/><br><b>Gordon Mumma (1972) Performing AMBIVEX.</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/4e-OzKSmZX0"); //Cybersonic Cantilevers (1973)</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.010.png'/><br><b>RCA Mark II Synthesiser, Milton Babbitt, Peter Mauzey, Vladimir Ussachevsky - gearogs.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.010.png'/><br><b>RCA Mark II Synthesiser, Milton Babbitt, Peter Mauzey, Vladimir Ussachevsky - gearogs.com</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.011.png '/><br><b>Max Mathews, GROOVE system (1969) - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.011.png '/><br><b>Max Mathews, GROOVE system (1969) - wikipedia.org</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.012.png'/><br><b>Laurie Spiegel - nytimes.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.012.png'/><br><b>Laurie Spiegel - nytimes.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/OhpjHB4076g"); // Old Wave (1974) GROOVE system
 Computer.url("http://youtu.be/AgdIRM5iMNE"); //Patchwork
 Computer.url("http://youtu.be/5_TObcetCc0"); //Improvisation
 Computer.url("http://youtu.be/TzOJtZYsGSA?t=2m40s"); //Laurie Spiegel interview</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.013.png'/><br><b>Music Mouse - youtube.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.013.png'/><br><b>Music Mouse - youtube.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/D-mmEvGOopk?t=30s"); //Music Mouse</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.014.png'/><br><b>In Introduction to Computer Muisc - Nick Collins (2010)</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.014.png'/><br><b>In Introduction to Computer Muisc - Nick Collins (2010)</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.015.png'/><br><b>In Machine Musicianship (2001)</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.015.png'/><br><b>In Machine Musicianship (2001)</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.016.png'/><br><b>In Living Electronic Music (2007)</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.016.png'/><br><b>In Living Electronic Music (2007)</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.017.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.017.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.018.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.018.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.019.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.020.png'/><br><b>Arduino - cloudfront.net</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.019.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.020.png'/><br><b>Arduino - cloudfront.net</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://www.arduino.cc/");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.021.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.021.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.022.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.022.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.023.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.023.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.024.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.024.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.025.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.027.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.025.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.027.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.028.png'/></div>
-<div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.030.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.028.png'/></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.030.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.031.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.031.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.032.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.032.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/epT16fbf4RM");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.033.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.033.png'/></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.034.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.034.png'/></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("https://www.mstrcyork.org/");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.035.png'/><br><b>mstrc Audience Response System</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.035.png'/><br><b>mstrc Audience Response System</b></div>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.036.png'/><br><b>Max Matthews with Radio Baton - computerhistory.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.036.png'/><br><b>Max Matthews with Radio Baton - computerhistory.org</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/3ZOzUVD4oLg?t=5m43s");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.037.png'/><br><b>Nicolas Collins: Trombone-Propelled Electronics - artschoolshithead.files.wordpress.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.037.png'/><br><b>Nicolas Collins: Trombone-Propelled Electronics - artschoolshithead.files.wordpress.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/89jbl0ZuaH4?t=4m55s");
 Computer.url("http://nicolascollins.com/texts/lowbrass.pdf");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthijnfotografie.nl</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.038.png'/><br><b>Michel Waisvisz (STEIM) - The Hands - carlavanthijnfotografie.nl</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://vimeo.com/1204467");
 Computer.url("http://vimeo.com/1219919");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.039.png'/><br><b>Laetitia Sonami: Lady’s Gloves - sonami.net</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.039.png'/><br><b>Laetitia Sonami: Lady’s Gloves - sonami.net</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/ngygk20M1pI");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.040.png'/><br><b>Imogen Heap: The Gloves - rachelfreire.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.040.png'/><br><b>Imogen Heap: The Gloves - rachelfreire.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/dcLFVhRHXUM?t=4m28s");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.041.png'/><br><b>Atau Tanaka - bbc.co.uk</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.041.png'/><br><b>Atau Tanaka - bbc.co.uk</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//sensor band:
 Computer.url("http://youtu.be/o-ZcsAHVn6A?t=2m48s");
@@ -135,11 +135,11 @@ Computer.url("http://youtu.be/XLSoPmY6jGM?t=5m20s");
 //biometric sensors::
 Computer.url("http://youtu.be/FB_yE_Y3_8k?t=3m50s");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.042.png'/><br><b>Tod Machover: Hyperinstruments - uvmbored.com</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.042.png'/><br><b>Tod Machover: Hyperinstruments - uvmbored.com</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/Zj2QoLhfwew?t=1m00s");</pre>
 
-<p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar3/seminar3.043.png'/><br><b>Reactable: Music Technology Group, Universitat Pompeu Fabra - http://youtu.be/0h-RhyopUmc</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar3/seminar3.043.png'/><br><b>Reactable: Music Technology Group, Universitat Pompeu Fabra - http://youtu.be/0h-RhyopUmc</b></div>
 
 <p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/0h-RhyopUmc");</pre>
 
