--- a/SSfMT.html
+++ b/SSfMT.html
@@ -30,13 +30,10 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Study%20Guides'>Study Guides</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Code%20Examples'>Code Examples</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#News'>News</a></li>
-<ul class='toc'><li class='toc2'><a href='#Events'>Events</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
+<ul class='toc'><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<div class='note'><span class='notelabel'>NOTE:</span> Dear all, please remember that the <a href="./SSfMT/Assignments/Presentation.html">Presentation/Concert</a> (10%) will be on <strong>Thrusday, 26 April</strong>. We will meet at <strong>13:15</strong> at the <strong>Rymer</strong> with the aim to do a quick sound check and sort last minute issues. I would like to aim to <strong>start the concert at 14:15</strong>. So if you would like to invite your friends to come tell them to be there at 14:15. Looking forward to hearing your work!!</div><div class='note'><span class='notelabel'>NOTE:</span> If you need help/support with your code for your assignment, please use the online list I've setup for this.
-<p>You can post your questions to the list by emailing: <strong>supercollider-york-group@york.ac.uk</strong>
-<p>You can also email me if you have other questions or concerns about your assignment/submission.
-<p><strong>Work hard, and good luck with your project! :)</strong></div><h2><a class='anchor' name='Module'>Module</a></h2>
+<div class='note'><span class='notelabel'>NOTE:</span> <strong>Well done on your submission and the concert! :)</strong>
+<p>I hope you enjoyed the module.</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
 <li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
@@ -61,9 +58,7 @@
 <li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/Simple FX.html">Simple FX</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a></ul>
 <h2><a class='anchor' name='News'>News</a></h2>
 
-<p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Events'>Events</a></h3>
-
-<p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
+<p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Links'>Links</a></h3>
 <ul>
 <li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
