--- a/SSfMT.html
+++ b/SSfMT.html
@@ -21,8 +21,7 @@
 <div class='subheader'>
 </div>
 <div id='toc'>
-<ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#Module'>Module</a></li>
+<ul class='toc'><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'><li class='toc2'><a href='#Module%20Information'>Module Information</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Lectures'>Lectures</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Practicals'>Practicals</a></li>
@@ -31,9 +30,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Code%20Examples'>Code Examples</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Links'>Links</a></li>
-<ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<div class='note'><span class='notelabel'>NOTE:</span> <strong>Well done on your submission and the concert! :)</strong>
-<p>I hope you enjoyed the module.</div><h2><a class='anchor' name='Module'>Module</a></h2>
+<ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
 <li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
